--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
+
 {
-  "name": "finança-simplificada",
+  "name": "financa-simplificada",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,17 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "lucide-react": "^0.563.0",
-    "react": "^19.2.4",
     "recharts": "^3.7.0",
     "@google/genai": "^1.40.0",
     "@emailjs/browser": "^4.4.1"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^19.2.4",
+    "@types/react-dom": "^19.2.4",
+    "vite": "^6.0.0",
+    "typescript": "^5.0.0"
   }
 }
